// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Link As a <button> 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <button
      class="Link-sc-1lpx3d0-0 cLSnCY"
      color="blue"
      font-size="medium"
    >
      Link
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Link Link  1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <a
      class="Link-sc-1lpx3d0-0 gxbSxg"
      color="blue"
      font-size="medium"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/Link With a different color 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <a
      class="Link-sc-1lpx3d0-0 cpcHzb"
      color="black"
      font-size="medium"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/Link With a different size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <a
      class="Link-sc-1lpx3d0-0 lbqvSo"
      color="black"
      font-size="large"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/Link Without underline 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <a
      class="Link-sc-1lpx3d0-0 clvBNI"
      color="blue"
      font-size="medium"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/Link with custom font size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <a
      class="Link-sc-1lpx3d0-0 eELETS"
      color="blue"
      font-size="small"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;
